--- a/cc/scss/components/_pages.scss
+++ b/cc/scss/components/_pages.scss
@@ -1110,6 +1110,7 @@ body.error404 {
   .store-item {
     width: 100%;
     padding: 0 10px;
+    padding-bottom: 50px;
     @include breakpoint($desktop-sm-layout){
       width: 50%;
       float: left;
